Updated meta info

--- a/matchmaker/templates/matchmaker/discover.html
+++ b/matchmaker/templates/matchmaker/discover.html
@@ -17,6 +17,7 @@
         </div>
     </div>
     <div class="profiles p-3 d-flex flex-row flex-wrap justify-content-center">
+        <!-- Needs to be changed. -->
         {% for profile in profiles %}
         <div class="profile-card card shadow pt-3 mb-4 bg-white rounded clickable mx-4" id="{{forloop.counter}}" style="width: 14rem;">
             <p class="card-content d-flex justify-content-center">
