--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -20,8 +20,8 @@
                     <h2 class="account-heading">{{ user.last_name }}</h2>
                 </div>
                 <div class="col text-center align-self-center">
-                    <h4 class="">Views: <span>124</span></h4>
-                    <h4 class="">Hotness: <span>12</span></h4>
+                    <h4 class="">Views: <span>{{ views }}</span></h4>
+                    <h4 class="">Hotness: <span>{{ heat }}</span></h4>
                 </div>
             </div>
         </div>
