--- a/matchmaker/templates/matchmaker/base.html
+++ b/matchmaker/templates/matchmaker/base.html
@@ -17,6 +17,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{% static 'matchmaker/main.css' %}" />
   <script src="{% static 'matchmaker/main.js' %}"></script>
+  <script src="{% static 'matchmaker/handlebars.js' %}"></script>
   {% block head %}
   <title>CHANGE ME</title>
   {% endblock %}
