--- a/matchmaker/templates/matchmaker/widgets/profile.html
+++ b/matchmaker/templates/matchmaker/widgets/profile.html
@@ -12,9 +12,9 @@
             </div>
             <div class="buttons d-flex justify-content-center pt-3">
                 {{#if heat}}
-                <i id="{{id}}" class="fas fa-fire heat-icon-active profile-hot"></i>
+                <i class="fas fa-fire heat-icon-active profile-hot"></i>
                 {{else}}
-                <i id="{{id}}" class="fas fa-fire heat-icon profile-hot"></i>
+                <i class="fas fa-fire heat-icon profile-hot"></i>
                 {{/if}}
             </div>
         </p>
