Api for search done, and updated model to use timestamp

--- a/matchmaker/static/matchmaker/main.css
+++ b/matchmaker/static/matchmaker/main.css
@@ -72,6 +72,8 @@ option[value=""][disabled] {
 
 
 .heat-icon-active:hover{
+  transition: all 0.2s ease-in-out;
+
   color: black;
   font-size: 30px;
   cursor: pointer;
