--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -35,6 +35,11 @@
                 <div id="errorEmail" class="invalid-feedback">Invalid email</div>
             </div>
             <div class="form-group">
+                <label for="dob">Date of Birth:</label>
+                <input type="date" name="dob" id="dob" class="form-control" autocomplete="off">
+                <div id="errorDob" class="invalid-feedback">Invalid Dob</div>
+            </div>
+            <div class="form-group">
                 <label for="password1">Password:</label>
                 <input type="password" name="password1" id="password" class="form-control" autocomplete="new-password">
                 <div id="errorPassword" class="invalid-feedback">Invalid password</div>
