--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -40,6 +40,14 @@
                 <div id="errorDob" class="invalid-feedback">Invalid Dob</div>
             </div>
             <div class="form-group">
+                <label for="gender">Gender:</label>
+                <select class="form-control" name="gender" id="gender">
+                    <option>M</option>
+                    <option>F</option>
+                  </select>
+                <div id="errorGender" class="invalid-feedback">Invalid Gender</div>
+            </div>
+            <div class="form-group">
                 <label for="password1">Password:</label>
                 <input type="password" name="password1" id="password" class="form-control" autocomplete="new-password">
                 <div id="errorPassword" class="invalid-feedback">Invalid password</div>
