Discover Form Done

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -12,7 +12,7 @@
     {% block body %}
     <div class="register-form shadow p-4 my-5 bg-white rounded" style="width:32rem; margin:auto">
         <h2 class="mb-3">Register</h2>
-        <form acition="" id="register" class="main-form">
+        <form action="" id="register" class="main-form">
             <div class="row">
                 <div class="col">
                     <div class="form-group">
@@ -42,8 +42,8 @@
             <div class="form-group">
                 <label for="gender">Gender:</label>
                 <select class="form-control" name="gender" id="gender">
-                    <option>M</option>
-                    <option>F</option>
+                    <option value="M">Male</option>
+                    <option value="F">Female</option>
                   </select>
                 <div id="errorGender" class="invalid-feedback">Invalid Gender</div>
             </div>
