Done Filtering Ajax

--- a/matchmaker/templates/matchmaker/discover.html
+++ b/matchmaker/templates/matchmaker/discover.html
@@ -34,6 +34,7 @@
                         <div class="form-group">
                             <label for="gender">Gender:</label>
                             <select class="form-control" name="gender" id="gender">
+                                <option value="">Male or Female</option>
                                 <option value="M">Male</option>
                                 <option value="F">Female</option>
                               </select>
@@ -43,7 +44,7 @@
     
                 </div>
                 <div class="text-center">
-                    <input id="registerButton" type="button" class="btn btn-primary " value="Filter">
+                    <input id="filterButton" type="button" class="btn btn-primary " value="Filter">
                 </div>
             </form>
         </div>
