--- a/matchmaker/templates/matchmaker/base.html
+++ b/matchmaker/templates/matchmaker/base.html
@@ -31,6 +31,7 @@
           {% if user.is_authenticated %}
           <li class="nav-item"><a href="{% url 'profile' %}" class="nav-link">Profile</a></li>
           <li class="nav-item"><a href="{% url 'matchmaker-discover' %}" class="nav-link">Discover</a></li>
+          <li class="nav-item"><a href="{% url 'matchmaker-matches' %}" class="nav-link">My Matches</a></li>
           {% endif %}
         </ul>
       </div>
