--- a/matchmaker/templates/matchmaker/widgets/profile.html
+++ b/matchmaker/templates/matchmaker/widgets/profile.html
@@ -26,7 +26,7 @@
                 <div class="modal-header">
                     <h5 class="modal-title text-primary">
                         {{firstname}} {{lastname}} <span class="age text-secondary">{{dob}}</span><span
-                            class="text-secondary">{{gender}}</span> •
+                            class="text-secondary">{{gender}}</span>
                         <span class="location text-secondary">{{location}}</span>
                     </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
