Fixed register page and validation

--- a/matchmaker/templates/matchmaker/base.html
+++ b/matchmaker/templates/matchmaker/base.html
@@ -60,12 +60,16 @@
   </div>
   <footer class="footer">
     <div class="upper-footer">
-      <p class="text-center pt-5">Footer content</p>
+      <p class="text-center pt-5">Welcome! This is a 'Matching Site' developed with the task to develop and deploy a
+        website using
+        the Django framework.
+        The website provides several functions and is build using jQuery + Ajax and Bootstrap.
+      </p>
     </div>
     <div class="lower-footer">
       <div class="lf-content">
         <div class="lf-content-left">
-          <span class="author">Thomas Bunyan et al.</span>
+          <span class="author">Thomas • Nesh • Sherise</span>
         </div>
         <div class="lf-content-right">
           Copyright &copy 2018.
