--- a/matchmaker/static/matchmaker/main.css
+++ b/matchmaker/static/matchmaker/main.css
@@ -51,11 +51,10 @@ option[value=""][disabled] {
 }
 .image-overlay{
   display: inline-block;
-  padding-top: 40px;
-  padding-left: 15px;
   opacity: 0;
   color: #fff;
   text-align: center;
+  cursor: pointer;
   font-size: 30pt;
   transition: 0.2s all ease-in-out;
 }
@@ -63,6 +62,15 @@ option[value=""][disabled] {
   opacity: 1;
   background-color: #2125295b;
   transition: 0.2s all ease-in-out;
+}
+#editProfileImage{
+  position: absolute; 
+  cursor: pointer; 
+  pointer-events: none; 
+  top:50%; 
+  left:50%;
+  padding-left: 13px;
+  transform: translate(-50%, -50%);
 }
 
 
@@ -97,7 +105,7 @@ option[value=""][disabled] {
 
 /* Style for footer */
 .footer{
-  height: 200px;
+  height: 170px;
   width: 100%;
 }
 .upper-footer{
@@ -108,7 +116,7 @@ option[value=""][disabled] {
 .lower-footer{
   background-color: #212529;
   color: #868e96;
-  height: 80px;
+  height: 50px;
 }
 .lf-content {
       width: 50%;
