Finalised some frontend changes

--- a/matchmaker/templates/matchmaker/home.html
+++ b/matchmaker/templates/matchmaker/home.html
@@ -13,11 +13,11 @@
   {% if user.is_authenticated %}
 
   {% else %}
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center" style="background-color: #FFE9EB">
     <div class="container">
       <h1>Welcome</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed harum culpa nemo iusto esse possimus alias
-        nesciunt veniam, voluptatum porro consequuntur, quod quae quam aspernatur et officiis iste provident. Sint!</p>
+      <p>This is the hottest way to find love in 2018! PLUS it's soo simple! Just register for a free account, give
+        your profile some glamour and put yourself out there. Love might be just one click away... </p>
       <a href="{% url 'register' %}" class="btn btn-primary">Sign up</a>
       <p><small class="text-center"><a href="{% url 'login' %}" class="text-muted">Already have an account? Sign in.</a></small></p>
     </div>
@@ -27,9 +27,9 @@
       <div class="col">
         <div class="card shadow p-3 bg-white rounded">
           <div class="card-body">
-            <h4 class="card-title">Get started</h4>
+            <h4 class="card-title">Custom profile</h4>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the bulk of the card's content.
+              Make sure to fill out your profile to increase your chances of finding that 'special someone'!
             </p>
           </div>
         </div>
@@ -37,9 +37,10 @@
       <div class="col">
         <div class="card shadow p-3 bg-white rounded">
           <div class="card-body">
-            <h4 class="card-title">Get started</h4>
+            <h4 class="card-title">Pimp your search</h4>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the bulk of the card's content.
+              Not having any luck? Try filtering through the many hopeful lovebirds by adding an age gender onto your
+              search. Otherwise be on the lookout for a notification from a potential match!
             </p>
           </div>
         </div>
@@ -47,9 +48,10 @@
       <div class="col">
         <div class="card shadow p-3 bg-white rounded">
           <div class="card-body">
-            <h4 class="card-title">Get started</h4>
+            <h4 class="card-title">Hotness</h4>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the bulk of the card's content.
+              Dish out the love! Click the hotness button on each profile in the discover page to increase your chances
+              of a match.
             </p>
           </div>
         </div>
