--- a/matchmaker/templates/matchmaker/widgets/profile.html
+++ b/matchmaker/templates/matchmaker/widgets/profile.html
@@ -40,20 +40,20 @@
                                 style="object-fit: cover;">
                         </div>
                         <div class="pl-4 flex-grow-1">
-                            <div class="d-flex flex-column p-3" style="height:100%">
+                            <div class="d-flex flex-column p-3" style="height:85%">
                                 <div class="d-flex flex-row flex-wrap justify-content-center" style="width:90%; margin: auto;">
                                     {{#each hobbies}}
                                     <span class="btn btn-primary mx-1 my-1">{{this}}</span>
                                     {{/each}}
                                 </div>
-                                <div class="row mt-4 mb-2">
+                                <div class="row mb-2">
                                     <p class="text-center" style="width:100%;">{{description}}</p>
                                 </div>
-                                <div class="d-flex flex-row justify-content-around" style="margin:auto; width: 30%; font-size: 25px">
+                                <!-- <div class="d-flex flex-row justify-content-around" style="margin:auto; width: 30%; font-size: 25px">
                                     <i class="fab fa-snapchat-ghost"></i>
                                     <i class="fab fa-instagram"></i>
                                     <i class="fab fa-twitter"></i>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
