--- a/matchmaker/templates/matchmaker/widgets/profiles.html
+++ b/matchmaker/templates/matchmaker/widgets/profiles.html
@@ -1,5 +1,5 @@
 {% verbatim %}
-<script id="profile-template" type="text/x-handlebars-template">
+<script id="profiles-template" type="text/x-handlebars-template">
     {{#each this}}
     <div class="profile-card card shadow pt-3 mb-4 bg-white rounded clickable mx-4" id="{{id}}" style="width: 14rem;">
         <p class="card-content d-flex justify-content-center">
